Kubernetes /Assignment 1/classroom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: classroom
  name: classroom-app
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: classroom-app
  template:
    metadata:
      labels:
        app: classroom-app
    spec:
      containers:
      - name: classroom-app
        image: classroom-service  # local docker image (from docker assignment 2)
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
        imagePullPolicy: Never    # To use local image & not to pull from the registry
        ports:
        - protocol: TCP
          containerPort: 12346
