Kubernetes /Assignment 1/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres-db
spec:
  replicas:
  selector:
    matchLabels:  
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres-db
        image: postgres:latest
        ports:
        - protocol: TCP
          containerPort: 5432
