Kubernetes /Assignment 1/classroom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classroom-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
      - host: classroom-example.com
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: classroom-service
                port:
                  number: 1234
